# MultipoleAttention

./: README.md  pyproject.toml
LongBench/: pred.py  result.py  run_baseline.sh  run_centroid.sh
LongBench/config/: dataset2prompt.json  model2maxlen.json  model2path.json
benchmark/: benchmark_kernels.py  benchmark_kmeans.py
gsm_infinite/gsm-infinite/: config.sh  run_centroid.sh  run_centroid_hybrid.sh  run_local.sh  vllm_serve.sh
gsm_infinite/gsm-infinite/data/symbolic/: generate_symbolic.py  generate_symbolic.sh
gsm_infinite/gsm-infinite/pred/: eval_symbolic.py  model_handler_local.py  no_rag_pipeline.py  pred_local_parallel.py
multipoleattention/: clustering.py  kernel_wrappers.py  kernels.py
multipoleattention/utils/: modelutils.py
transformers/src/transformers/models/llama/: modeling_llama.py
transformers/src/transformers/models/mistral/: modeling_mistral.py
transformers/src/transformers/models/phi3/: modeling_phi3.py
transformers/src/transformers/models/qwen2/: configuration_qwen2.py  modeling_qwen2.py
transformers/src/transformers/models/qwen3/: configuration_qwen3.py  modeling_qwen3.py
