[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multipoleattention"
version = "0.1.0"
description = "Multipole Attention"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "datasets",
    "pytest",
    "absl-py",
    "nltk",
    "rouge_score",
    "jieba",
    "rouge",
    "fuzzywuzzy",
    "evaluate",
    "tiktoken>=0.9.0",
    "scikit-learn>=1.6.1",
    "numpy==2.0",
    "matplotlib",
]

[tool.setuptools.packages.find]
